// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CouponDetailsWrapper renders with collapsed coupon details 1`] = `
<div
  className="coupon-details row no-gutters px-2 my-3 d-none"
  id="coupon-details-1"
>
  <div
    className="col"
  />
</div>
`;

exports[`CouponDetailsWrapper renders with error 1`] = `
<div
  className="coupon-details row no-gutters px-2 my-3"
  id="coupon-details-1"
>
  <div
    className="col"
  >
    <div
      className="details-header row no-gutters mb-3"
    >
      <div
        className="col-12 col-md-6 mb-2 mb-md-0"
      >
        <h3
          className={null}
        >
          Coupon Details
        </h3>
      </div>
      <div
        className="col-12 col-md-6 mb-2 mb-md-0 text-md-right"
      >
        <button
          className="btn btn-outline-primary download-btn"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa mr-2 fa-download"
            id="Icon8"
          />
          Download full report (CSV)
        </button>
      </div>
    </div>
    <div
      className="row mb-3"
    >
      <div
        className="toggles col-12 col-md-8"
      >
        <div
          className="form-group"
        >
          <label
            className=""
            htmlFor="asInput6"
            id="label-asInput6"
          >
            Filter by Code Status:
          </label>
          <select
            aria-describedby="error-asInput6"
            aria-invalid={false}
            className="form-control is-invalid-nodanger mt-1"
            disabled={false}
            id="asInput6"
            name="table-view"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyPress={[Function]}
            options={
              Array [
                Object {
                  "label": "Unassigned",
                  "value": "unassigned",
                },
                Object {
                  "label": "Unredeemed",
                  "value": "unredeemed",
                },
                Object {
                  "label": "Partially Redeemed",
                  "value": "partially-redeemed",
                },
                Object {
                  "label": "Redeemed",
                  "value": "redeemed",
                },
              ]
            }
            required={false}
            type="select"
            value="unredeemed"
          >
            <option
              value="unassigned"
            >
              Unassigned
            </option>
            <option
              value="unredeemed"
            >
              Unredeemed
            </option>
            <option
              value="partially-redeemed"
            >
              Partially Redeemed
            </option>
            <option
              value="redeemed"
            >
              Redeemed
            </option>
          </select>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput6"
          >
            <span />
          </div>
        </div>
      </div>
      <div
        className="bulk-actions col-12 col-md-4 text-md-right mt-3 m-md-0"
      >
        <div
          className="form-group"
        >
          <label
            className=""
            htmlFor="asInput7"
            id="label-asInput7"
          >
            Bulk Action:
          </label>
          <select
            aria-describedby="error-asInput7"
            aria-invalid={false}
            className="form-control is-invalid-nodanger mt-1"
            disabled={true}
            id="asInput7"
            name="bulk-action"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyPress={[Function]}
            options={
              Array [
                Object {
                  "disabled": true,
                  "label": "Assign",
                  "value": "assign",
                },
                Object {
                  "disabled": true,
                  "label": "Remind",
                  "value": "remind",
                },
                Object {
                  "disabled": true,
                  "label": "Revoke",
                  "value": "revoke",
                },
              ]
            }
            required={false}
            type="select"
            value="assign"
          >
            <option
              disabled={true}
              value="assign"
            >
              Assign
            </option>
            <option
              disabled={true}
              value="remind"
            >
              Remind
            </option>
            <option
              disabled={true}
              value="revoke"
            >
              Revoke
            </option>
          </select>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput7"
          >
            <span />
          </div>
        </div>
        <button
          className="btn btn-primary ml-2"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Go
        </button>
      </div>
    </div>
    <div
      className="row mb-3"
    >
      <div
        className="col"
      >
        <div
          className="alert fade alert-danger show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className="d-flex"
            >
              <div
                className="icon mr-2"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-times-circle"
                  id="Icon9"
                />
              </div>
              <div
                className="message"
              >
                An error has occurred: 
                <ul
                  className="m-0 pl-4"
                >
                  <li>
                    Unable to send code assignment email to
                                 test@bestrun.com for test-code-1 code.
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CouponDetailsWrapper renders with expanded coupon details 1`] = `
<div
  className="coupon-details row no-gutters px-2 my-3"
  id="coupon-details-1"
>
  <div
    className="col"
  >
    <div
      className="details-header row no-gutters mb-3"
    >
      <div
        className="col-12 col-md-6 mb-2 mb-md-0"
      >
        <h3
          className={null}
        >
          Coupon Details
        </h3>
      </div>
      <div
        className="col-12 col-md-6 mb-2 mb-md-0 text-md-right"
      >
        <button
          className="btn btn-outline-primary download-btn"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa mr-2 fa-download"
            id="Icon2"
          />
          Download full report (CSV)
        </button>
      </div>
    </div>
    <div
      className="row mb-3"
    >
      <div
        className="toggles col-12 col-md-8"
      >
        <div
          className="form-group"
        >
          <label
            className=""
            htmlFor="asInput3"
            id="label-asInput3"
          >
            Filter by Code Status:
          </label>
          <select
            aria-describedby="error-asInput3"
            aria-invalid={false}
            className="form-control is-invalid-nodanger mt-1"
            disabled={false}
            id="asInput3"
            name="table-view"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyPress={[Function]}
            options={
              Array [
                Object {
                  "label": "Unassigned",
                  "value": "unassigned",
                },
                Object {
                  "label": "Unredeemed",
                  "value": "unredeemed",
                },
                Object {
                  "label": "Partially Redeemed",
                  "value": "partially-redeemed",
                },
                Object {
                  "label": "Redeemed",
                  "value": "redeemed",
                },
              ]
            }
            required={false}
            type="select"
            value="unassigned"
          >
            <option
              value="unassigned"
            >
              Unassigned
            </option>
            <option
              value="unredeemed"
            >
              Unredeemed
            </option>
            <option
              value="partially-redeemed"
            >
              Partially Redeemed
            </option>
            <option
              value="redeemed"
            >
              Redeemed
            </option>
          </select>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput3"
          >
            <span />
          </div>
        </div>
      </div>
      <div
        className="bulk-actions col-12 col-md-4 text-md-right mt-3 m-md-0"
      >
        <div
          className="form-group"
        >
          <label
            className=""
            htmlFor="asInput4"
            id="label-asInput4"
          >
            Bulk Action:
          </label>
          <select
            aria-describedby="error-asInput4"
            aria-invalid={false}
            className="form-control is-invalid-nodanger mt-1"
            disabled={true}
            id="asInput4"
            name="bulk-action"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyPress={[Function]}
            options={
              Array [
                Object {
                  "disabled": true,
                  "label": "Assign",
                  "value": "assign",
                },
                Object {
                  "disabled": true,
                  "label": "Remind",
                  "value": "remind",
                },
                Object {
                  "disabled": true,
                  "label": "Revoke",
                  "value": "revoke",
                },
              ]
            }
            required={false}
            type="select"
            value="assign"
          >
            <option
              disabled={true}
              value="assign"
            >
              Assign
            </option>
            <option
              disabled={true}
              value="remind"
            >
              Remind
            </option>
            <option
              disabled={true}
              value="revoke"
            >
              Revoke
            </option>
          </select>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput4"
          >
            <span />
          </div>
        </div>
        <button
          className="btn btn-primary ml-2"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Go
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CouponDetailsWrapper renders with table data 1`] = `
<div
  className="coupon-details row no-gutters px-2 my-3"
  id="coupon-details-1"
>
  <div
    className="col"
  >
    <div
      className="details-header row no-gutters mb-3"
    >
      <div
        className="col-12 col-md-6 mb-2 mb-md-0"
      >
        <h3
          className={null}
        >
          Coupon Details
        </h3>
      </div>
      <div
        className="col-12 col-md-6 mb-2 mb-md-0 text-md-right"
      >
        <button
          className="btn btn-outline-primary download-btn"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa mr-2 fa-download"
            id="Icon10"
          />
          Download full report (CSV)
        </button>
      </div>
    </div>
    <div
      className="row mb-3"
    >
      <div
        className="toggles col-12 col-md-8"
      >
        <div
          className="form-group"
        >
          <label
            className=""
            htmlFor="asInput11"
            id="label-asInput11"
          >
            Filter by Code Status:
          </label>
          <select
            aria-describedby="error-asInput11"
            aria-invalid={false}
            className="form-control is-invalid-nodanger mt-1"
            disabled={false}
            id="asInput11"
            name="table-view"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyPress={[Function]}
            options={
              Array [
                Object {
                  "label": "Unassigned",
                  "value": "unassigned",
                },
                Object {
                  "label": "Unredeemed",
                  "value": "unredeemed",
                },
                Object {
                  "label": "Partially Redeemed",
                  "value": "partially-redeemed",
                },
                Object {
                  "label": "Redeemed",
                  "value": "redeemed",
                },
              ]
            }
            required={false}
            type="select"
            value="unassigned"
          >
            <option
              value="unassigned"
            >
              Unassigned
            </option>
            <option
              value="unredeemed"
            >
              Unredeemed
            </option>
            <option
              value="partially-redeemed"
            >
              Partially Redeemed
            </option>
            <option
              value="redeemed"
            >
              Redeemed
            </option>
          </select>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput11"
          >
            <span />
          </div>
        </div>
      </div>
      <div
        className="bulk-actions col-12 col-md-4 text-md-right mt-3 m-md-0"
      >
        <div
          className="form-group"
        >
          <label
            className=""
            htmlFor="asInput12"
            id="label-asInput12"
          >
            Bulk Action:
          </label>
          <select
            aria-describedby="error-asInput12"
            aria-invalid={false}
            className="form-control is-invalid-nodanger mt-1"
            disabled={false}
            id="asInput12"
            name="bulk-action"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyPress={[Function]}
            options={
              Array [
                Object {
                  "disabled": false,
                  "label": "Assign",
                  "value": "assign",
                },
                Object {
                  "disabled": true,
                  "label": "Remind",
                  "value": "remind",
                },
                Object {
                  "disabled": true,
                  "label": "Revoke",
                  "value": "revoke",
                },
              ]
            }
            required={false}
            type="select"
            value="assign"
          >
            <option
              disabled={false}
              value="assign"
            >
              Assign
            </option>
            <option
              disabled={true}
              value="remind"
            >
              Remind
            </option>
            <option
              disabled={true}
              value="revoke"
            >
              Revoke
            </option>
          </select>
          <div
            aria-live="polite"
            className="invalid-feedback invalid-feedback-nodanger"
            id="error-asInput12"
          >
            <span />
          </div>
        </div>
        <button
          className="btn btn-primary ml-2"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Go
        </button>
      </div>
    </div>
    <div
      className="coupon-details-table"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <div
            className="table-responsive"
          >
            <table
              className="table table-sm table-striped"
            >
              <thead
                className=""
              >
                <tr
                  className=""
                >
                  <th
                    className=""
                    scope="col"
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        aria-checked={false}
                        aria-describedby="error-select-all-codes"
                        aria-invalid={false}
                        checked={false}
                        className="form-check-input is-invalid-nodanger"
                        disabled={false}
                        id="select-all-codes"
                        name="select all codes"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        required={false}
                        type="checkbox"
                        value=""
                      />
                      <label
                        className="form-check-label"
                        htmlFor="select-all-codes"
                        id="label-select-all-codes"
                      >
                        <div
                          className="sr-only"
                        >
                          select all codes
                        </div>
                      </label>
                      <div
                        aria-live="polite"
                        className="invalid-feedback invalid-feedback-nodanger"
                        id="error-select-all-codes"
                      >
                        <span />
                      </div>
                    </div>
                  </th>
                  <th
                    className=""
                    scope="col"
                  >
                    Redemptions
                  </th>
                  <th
                    className=""
                    scope="col"
                  >
                    Code
                  </th>
                  <th
                    className=""
                    scope="col"
                  >
                    Assignments Remaining
                  </th>
                  <th
                    className=""
                    scope="col"
                  >
                    Actions
                  </th>
                </tr>
              </thead>
              <tbody
                className=""
              >
                <tr
                  className=""
                >
                  <td
                    className=""
                    scope={null}
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        aria-checked={false}
                        aria-describedby="error-asInput13"
                        aria-invalid={false}
                        checked={false}
                        className="form-check-input is-invalid-nodanger"
                        disabled={false}
                        id="asInput13"
                        name="select code test-code-1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        required={false}
                        type="checkbox"
                        value=""
                      />
                      <label
                        className="form-check-label"
                        htmlFor="asInput13"
                        id="label-asInput13"
                      >
                        <div
                          className="sr-only"
                        >
                          select code test-code-1
                        </div>
                      </label>
                      <div
                        aria-live="polite"
                        className="invalid-feedback invalid-feedback-nodanger"
                        id="error-asInput13"
                      >
                        <span />
                      </div>
                    </div>
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    10 of 100
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    test-code-1
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    85
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    <button
                      className="btn remind-btn btn-link btn-sm px-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      Remind
                    </button>
                    <span>
                      |
                    </span>
                    <button
                      className="btn revoke-btn btn-link btn-sm px-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      Revoke
                    </button>
                  </td>
                </tr>
                <tr
                  className=""
                >
                  <td
                    className=""
                    scope={null}
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        aria-checked={false}
                        aria-describedby="error-asInput14"
                        aria-invalid={false}
                        checked={false}
                        className="form-check-input is-invalid-nodanger"
                        disabled={false}
                        id="asInput14"
                        name="select code test-code-2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        required={false}
                        type="checkbox"
                        value=""
                      />
                      <label
                        className="form-check-label"
                        htmlFor="asInput14"
                        id="label-asInput14"
                      >
                        <div
                          className="sr-only"
                        >
                          select code test-code-2
                        </div>
                      </label>
                      <div
                        aria-live="polite"
                        className="invalid-feedback invalid-feedback-nodanger"
                        id="error-asInput14"
                      >
                        <span />
                      </div>
                    </div>
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    100 of 100
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    test-code-2
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    0
                  </td>
                  <td
                    className=""
                    scope={null}
                  />
                </tr>
                <tr
                  className=""
                >
                  <td
                    className=""
                    scope={null}
                  >
                    <div
                      className="form-check"
                    >
                      <input
                        aria-checked={false}
                        aria-describedby="error-asInput15"
                        aria-invalid={false}
                        checked={false}
                        className="form-check-input is-invalid-nodanger"
                        disabled={false}
                        id="asInput15"
                        name="select code test-code-3"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        required={false}
                        type="checkbox"
                        value=""
                      />
                      <label
                        className="form-check-label"
                        htmlFor="asInput15"
                        id="label-asInput15"
                      >
                        <div
                          className="sr-only"
                        >
                          select code test-code-3
                        </div>
                      </label>
                      <div
                        aria-live="polite"
                        className="invalid-feedback invalid-feedback-nodanger"
                        id="error-asInput15"
                      >
                        <span />
                      </div>
                    </div>
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    10 of 100
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    test-code-3
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    85
                  </td>
                  <td
                    className=""
                    scope={null}
                  >
                    <button
                      className="btn assignment-btn btn-link btn-sm px-0"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      Assign
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        className="row mt-2"
      >
        <div
          className="col d-flex justify-content-center"
        >
          <nav
            aria-label="coupon-details-pagination"
          >
            <div
              aria-atomic={true}
              aria-live="polite"
              aria-relevant="text"
              className="sr-only"
            >
              Page 1, Current Page, of 2
            </div>
            <ul
              className="pagination"
            >
              <li
                className="page-item disabled"
              >
                <button
                  aria-label="Previous"
                  className="btn previous page-link"
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-chevron-left mr-2"
                      id="pagination-16"
                    />
                    Previous
                  </div>
                </button>
              </li>
              <li
                className="page-item"
              >
                <button
                  aria-label="Next, Page 2"
                  className="btn next page-link"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  <div>
                    Next
                    <span
                      aria-hidden={true}
                      className="fa fa-chevron-right ml-2"
                      id="pagination-17"
                    />
                  </div>
                </button>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;
